--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizMind">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.TestFormActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.TestActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
