Crated Login/Register Form and connect to my Spring boot aplication. JWT token based login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -11,24 +14,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizMind">
+
+        <!-- ✅ LoginActivity is now the first screen -->
         <activity
-            android:name=".activities.TestReviewActivity"
+            android:name=".activities.LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- MainActivity is no longer the launcher -->
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".activities.TestActivity"
             android:exported="false" />
         <activity
             android:name=".activities.TestFormActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.TestActivity"
+            android:name=".activities.TestReviewActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".activities.HistoryActivity"
+            android:exported="false" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
